Fixing experience image sizing on mobile

--- a/style.css
+++ b/style.css
@@ -84,6 +84,11 @@ canvas {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+.experience-img-container {
+    object-fit: contain;
+}
+
 /* General timeline styles */
 .timeline {
   position: relative;
